Updated the media query for game-text as there was overflow of the text when Multiplication was selected on smaller screens. Also, fixed the prompt returning to the text box in game play after an incorrect answer is inputed.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ body {
         width: 75%;
     }
     .game-text{
-    font-size: 3.5em;
+    font-size: 3.2em;
 }
     .dropdown-text{
         font-size: 0.69rem;
